--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@ bin/
 
 dist/
 
+# Installed dependencies
+node_modules/
+web/dashboard/node_modules/
+
 # Local TLS artifacts (generated per developer)
 deploy/certs/dev/
